--- a/rnoaa_GHCN_csv_netcd.Rmd
+++ b/rnoaa_GHCN_csv_netcd.Rmd
@@ -91,69 +91,81 @@ Specific Output for CITY:US460006
 
 ```{r}
 
-ncdc_index = 47 #20
-
-ncdc_id_code = ncdc_ids$id[ncdc_index]
-
-ghcn_station_code = unlist(strsplit(x      = ncdc_id_code,
-                                    split  = ":"))
-
-ncdc_start_yymmdd = ncdc_ids$mindate[ncdc_index]
-ncdc_end_yymmdd   = ncdc_ids$maxdate[ncdc_index]
-
-start_year = unlist(strsplit(x      = ncdc_start_yymmdd,
-                             split  = "-"))
-
-start_day   = start_year[3]
-start_month = start_year[2]
-start_year  = start_year[1]
+  ncdc_index = 47 #20
   
-end_year = unlist(strsplit(x      = ncdc_end_yymmdd,
-                           split  = "-"))
+  station_name_label     = ncdc_ids$name[ncdc_index]
+  station_latitude       = ncdc_ids$latitude[ncdc_index]
+  station_longitude      = ncdc_ids$longitude[ncdc_index]
+  station_altitude       = ncdc_ids$elevation[ncdc_index]
 
-end_day   = end_year[3]
-end_month = end_year[2]
-end_year  = end_year[1]
+  ncdc_id_code = ncdc_ids$id[ncdc_index]
+  
+  ghcn_station_code = unlist(strsplit(x      = ncdc_id_code,
+                                      split  = ":"))
+  
+  ncdc_start_yymmdd = ncdc_ids$mindate[ncdc_index]
+  ncdc_end_yymmdd   = ncdc_ids$maxdate[ncdc_index]
+  
+  Date = seq(from = as.Date(ncdc_start_yymmdd), 
+             to   = as.Date(ncdc_end_yymmdd), 
+             by   = "days")
+  
+  split_ncdc = unlist(strsplit(x      = ncdc_id_code,
+                               split  = ":"))
+  
+  ncdc_data = ghcnd(stationid = ghcn_station_code[2])
+  
+  available_datafields = unique(ncdc_data$element)
+  
+  sorted_data = ghcnd_splitvars(ncdc_data)
+  
+  filename_station_label = ncdc_ids$name[ncdc_index]
+  filename_station_label = gsub(" US",  "",  filename_station_label)
+  filename_station_label = gsub(  ",",  "",  filename_station_label)
+  filename_station_label = gsub(  " ", "_",  filename_station_label)
 
-Date = seq(from = as.Date(ncdc_start_yymmdd), 
-           to   = as.Date(ncdc_end_yymmdd), 
-           by   = "days")
+  filename_ghcn_label = ncdc_ids$id[ncdc_index]
+  filename_ghcn_label = gsub(":", "-", filename_ghcn_label)
 
-split_ncdc = unlist(strsplit(x      = ncdc_id_code,
-                             split  = ":"))
+  file_title_string = paste(filename_ghcn_label,
+                            "__",
+                            filename_station_label,
+                            sep="")
+  
+  remove(ncdc_data)
 
-ncdc_data =  ncdc(datasetid = split_ncdc[1],
-                  stationid = ncdc_id_code,
-                  startdate = working_start_yymmdd,
-                  enddate   = working_end_yymmdd)
-
-
-ncdc_data = ghcnd(stationid = ghcn_station_code[2])
-
-available_datafields = unique(ncdc_data$element)
-
-sorted_data = ghcnd_splitvars(ncdc_data)
-
-remove(ncdc_data)
 ```
 
 
 ```{r}
 
-tmax_full_field        = sorted_data$tmax
-  tmax_full_field$tmax = tmax_full_field$tmax / 10
 
-tmin_full_field        = sorted_data$tmin
-  tmin_full_field$tmin = tmin_full_field$tmin / 10
+  tmax_full_field          = sorted_data$tmax
+    ordered                = order(tmax_full_field$date)
+    tmax_full_field$tmax[] = tmax_full_field$tmax[ordered] / 10
+    tmax_full_field$date[] = tmax_full_field$date[ordered] 
   
-prcp_full_field        = sorted_data$prcp
-  prcp_full_field$prcp = prcp_full_field$prcp / 10
-  
-snow_full_field = sorted_data$snow
-
-snwd_full_field = sorted_data$snwd
-
-remove(sorted_data)
+  tmin_full_field          = sorted_data$tmin
+    ordered                = order(tmin_full_field$date)
+    tmin_full_field$tmin[] = tmin_full_field$tmin[ordered] / 10
+    tmin_full_field$date[] = tmin_full_field$date[ordered] 
+    
+  prcp_full_field          = sorted_data$prcp
+    ordered                = order(prcp_full_field$date)
+    prcp_full_field$prcp[] = prcp_full_field$prcp[ordered] / 10
+    prcp_full_field$date[] = prcp_full_field$date[ordered] 
+    
+  snow_full_field          = sorted_data$snow
+    ordered                = order(snow_full_field$date)
+    snow_full_field$snow[] = snow_full_field$snow[ordered]
+    snow_full_field$date[] = snow_full_field$date[ordered] 
+    
+  snwd_full_field          = sorted_data$snwd
+    ordered                = order(snwd_full_field$date)
+    snwd_full_field$snwd[] = snwd_full_field$snwd[ordered]
+    snwd_full_field$date[] = snwd_full_field$date[ordered] 
+    
+  remove(sorted_data)
 
 ```
 
@@ -161,29 +173,158 @@ remove(sorted_data)
 
 ```{r}
 
-Days_from_1970_01_01 = as.numeric( as.Date(Date) )
+  Days_from_1970_01_01 = as.numeric( as.Date(Date) )
+  
+  index_days           = Days_from_1970_01_01      - 
+                         min(Days_from_1970_01_01) + 
+                         1
+  
+  nd = length(index_days)
+  
+  tmax   = Days_from_1970_01_01
+  tmax[] = NA
+  tmin   = tmax
+  prcp   = tmax
+  snow   = tmax
+  snwd   = tmax
+  
+  index_tmax =  as.numeric(tmax_full_field$date) - Days_from_1970_01_01[1] + 1
+  index_tmin =  as.numeric(tmin_full_field$date) - Days_from_1970_01_01[1] + 1
+  index_prcp =  as.numeric(prcp_full_field$date) - Days_from_1970_01_01[1] + 1
+  index_snow =  as.numeric(snow_full_field$date) - Days_from_1970_01_01[1] + 1
+  index_snwd =  as.numeric(snwd_full_field$date) - Days_from_1970_01_01[1] + 1
+  
+  index_tmax = index_tmax[which(index_tmax<=max(index_days))]
+  index_tmin = index_tmin[which(index_tmin<=max(index_days))]
+  index_prcp = index_prcp[which(index_prcp<=max(index_days))]
+  index_snow = index_snow[which(index_snow<=max(index_days))]
+  index_snwd = index_snwd[which(index_snwd<=max(index_days))]
+  
+  tmax[index_tmax] = tmax_full_field$tmax[index_tmax]
+  tmin[index_tmin] = tmin_full_field$tmin[index_tmin]
+  prcp[index_prcp] = prcp_full_field$prcp[index_prcp]
+  snow[index_snow] = snow_full_field$snow[index_snow]
+  snwd[index_snwd] = snwd_full_field$snwd[index_snwd]
 
-index_days = Days_from_1970_01_01 - min(Days_from_1970_01_01) + 1
 
-tmax   = Days_from_1970_01_01
-tmax[] = NA
-tmin   = tmax
-prcp   = tmax
-snow   = tmax
-snwd   = tmax
-
-index_tmax =  as.numeric(tmax_full_field$date) - Days_from_1970_01_01[1] + 1
-index_tmin =  as.numeric(tmin_full_field$date) - Days_from_1970_01_01[1] + 1
-index_prcp =  as.numeric(prcp_full_field$date) - Days_from_1970_01_01[1] + 1
-index_snow =  as.numeric(snow_full_field$date) - Days_from_1970_01_01[1] + 1
-index_snwd =  as.numeric(snwd_full_field$date) - Days_from_1970_01_01[1] + 1
-
-tmax[index_tmax] = tmax_full_field$tmax[index_tmax]
-tmin[index_tmin] = tmin_full_field$tmin[index_tmin]
-prcp[index_prcp] = prcp_full_field$prcp[index_prcp]
-snow[index_snow] = snow_full_field$snow[index_snow]
-snwd[index_snwd] = snwd_full_field$snwd[index_snwd]
 
 ```
 
+Plot Max Temperature
+
+```{r}
+
+  plot(x       = Date,
+       y       = tmax, 
+       type    = "p", 
+       pch     = ".",   # as points
+       col     = "red", 
+       lwd     = 1.5, 
+       cex.lab = 1.25,
+       xlab    = "Date", 
+       ylab    = "Max Temperature (deg C)",
+       main    = station_name_label)
+
+
+```
+
+Plot Min Temperatures
+
+```{r}
+
+  plot(x       = Date,
+       y       = tmin, 
+       type    = "p", 
+       pch     = ".",   # as points
+       col     = "darkgreen", 
+       lwd     = 1.5, 
+       cex.lab = 1.25,
+       xlab    = "Date", 
+       ylab    = "Min Temperature (deg C)",
+       main    = station_name_label)
+
+```
+
+Plot Precip
+
+```{r}
+
+  plot(x       = Date,
+       y       = prcp, 
+       type    = "p", 
+       pch     = ".",   # as points
+       col     = "green", 
+       lwd     = 1.5, 
+       cex.lab = 1.25,
+       xlab    = "Date", 
+       ylab    = "Daily Precip (mm)",
+       main    = station_name_label)
+
+```
+
+Plot Snow
+
+```{r}
+
+  plot(x       = Date,
+       y       = snow, 
+       type    = "p", 
+       pch     = ".",   # as points
+       col     = "cyan", 
+       lwd     = 1.5, 
+       cex.lab = 1.25,
+       xlab    = "Date", 
+       ylab    = "Daily Snowfall (mm)",
+       main    = station_name_label)
+
+```
+
+Plot Snow Depth
+
+```{r}
+
+  plot(x       = Date,
+       y       = snwd,
+       type    = "p", 
+       pch     = ".",   # as points
+       col     = "darkblue", 
+       lwd     = 1.5, 
+       cex.lab = 1.25,
+       xlab    = "Date", 
+       ylab    = "Daily Snowfall (mm)",
+       main    = station_name_label)
+
+```
+
+Convert to a CSV File.
+
+```{r}
+
+
+  targ_time_series_raw                      = data.frame(date = Date)
+  
+
+  
+  targ_time_series_raw$max_temperature = targ_data$tmax
+  targ_time_series_raw$min_temperature = targ_data$tmin
+  targ_time_series_raw$precipitation   = targ_data$pcpn
+  targ_time_series_raw$snowfall        = targ_data$snow
+  targ_time_series_raw$snowdepth       = targ_data$snwd
+
+  
+    
+  output_file_name = paste(file_title_string,
+                           ".csv",
+                           sep="")
+  
+  write.table(x    = targ_time_series_raw, 
+              file = output_file_name, 
+              sep  =", ",
+              row.names = FALSE)
+
+```
+ 
+
+
+```
 
